Changed Event Names

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -176,24 +176,24 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                     <h4 class="modal-title">Select Events</h4>
                                                     </div>
                                                     <div class="modal-body">
-                                                            <label for="Quizical"><input type="checkbox" class="event_checks" value=50 name="Quizical" id="Quizical"/>QUIZICAL</label><br>
+                                                            <label for="Quizzical"><input type="checkbox" class="event_checks" value=50 name="Quizzical" id="Quizzical"/>QUIZZI CAL</label><br>
                                                             <label for="GAME OF CODING"><input type="checkbox" class="event_checks" value=50 name="GAME OF CODING" id="GAME OF CODING"/>GAME OF CODING</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (PC)"/>MULTIPLAYER GAMING - PC</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (MOBILE)"/>MULTIPLAYER GAMING - MOBILE</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="BUGVILLA BUG-HUNTING"/>BUGVILLA BUG-HUNTING</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=100 name="WEBSITE DESIGN"/>WEBSITE DESIGN</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS (Linux)"/>WORKSHOP SESSIONS - Linux</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS (Git and Github)"/>WORKSHOP SESSIONS - Git and Github</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (PC)"/>LAN GAMING - PC</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (MOBILE)"/>LAN GAMING - MOBILE</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="BUGVILLA BUG-HUNTING"/>BUGVILLA - BIG FINDING CHALLENGE</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=100 name="WEBSITE DESIGN"/>DOODLE - WEBSITE DESIGN COMPETITION</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS (Linux)"/>Hands On WORKSHOP - Linux and IRC</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS (Git and Github)"/>Hands On WORKSHOP - Git and Github</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=100 name="FEEL THE BEAT-DANCE COMPETITION (SOLO)"/>FEEL THE BEAT-DANCE COMPETITION (SOLO)</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=500 name="FEEL THE BEAT-DANCE COMPETITION (GROUP)"/>FEEL THE BEAT-DANCE COMPETITION (GROUP)</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=200 name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=50 name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="PIXELS-THE PHOTOGRAPHY COMPETITION"/>PIXELS-THE PHOTOGRAPHY COMPETITION</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=80 name="TEKTION-THE MOVIEMAKING COMPETITION"/>TEKTION-THE MOVIEMAKING COMPETITION</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=250 name="TPL-CRICKET TOURNAMENT"/>TPL-CRICKET TOURNAMENT</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=200 name="TREASURE HUNT"/>TREASURE HUNT</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="COUCH-POTATO"/>COUCH-POTATO</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="FACE PAINTING"/>FACE PAINTING</label><br>
+                                                         <!--   <label for=""><input type="checkbox" class="event_checks" value=50 name="PIXELS-THE PHOTOGRAPHY COMPETITION"/>PIXELS-THE PHOTOGRAPHY COMPETITION</label><br>-->
+                                                         <!--   <label for=""><input type="checkbox" class="event_checks" value=80 name="TEKTION-THE MOVIEMAKING COMPETITION"/>TEKTION-THE MOVIEMAKING COMPETITION</label><br> -->
+                                                            <label for=""><input type="checkbox" class="event_checks" value=250 name="TPL-CRICKET TOURNAMENT"/>GULLY CRICKET -CRICKET TOURNAMENT</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=200 name="TREASURE HUNT"/>HUNT'MANIA - TREASURE HUNT</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="COUCH-POTATO"/>COUCH-POTATO COMPETITION</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="FACE PAINTING"/>BRUSH STROKES - FACE PAINTING</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=50 name="CHESSMATE"/>CHESSMATE</label><br>               
                                                     </div>
                                                     <div class="modal-footer">
@@ -271,7 +271,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                     
                                 </span>   
                             </div><br>
-                            <input type="button" class="btn button-success pure-button button-xlarge btn-primary btn-block w-25 text-center mx-auto" id="getModal" data-toggle="modal"
+                            <input type="button" class="btn button-success pure-button button-xlarge btn-primary btn-block w-50 text-center mx-auto" id="getModal" data-toggle="modal"
                             data-target="#no_id" onclick="javascript:sendData();" value="Pay">
                             <br>
                           </form>
