Event Reg Page Center-Block

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -125,7 +125,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <div class="">
                       <div class="container">
                         <div class="row">
-                          <div class="col-md-8 order-md-1">
+                          <div class="col-md-8 order-md-1 center-block">
                             <h4 class="mb-3">Enter Details</h4>
                             <form id="gform" method="POST" data-email="sqas.sq1@gmail.com" onSubmit='$("#thankyou_message").show();'
                             action="https://script.google.com/macros/s/AKfycbxzVA8LniWhpG27gh1NzZO6IrKqDCAA7-GT8C2bukm8GWCFbO0/exec">
@@ -282,80 +282,6 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                             </div>
                             <!-- END -->
                           </div>
-                          <div class="col-md-4 order-md-2">
-                              <h4 class="d-flex justify-content-between mb-3"> <span class="text-muted"><b>Readme !!</b></span><span class="badge badge-secondary badge-pill">16</span> </h4>
-                              <ul class="list-group">
-                              <div>
-                                <li class="list-group-item d-flex align-items-end justify-content-between">
-                                    <h6 class="my-0"><b>Events</b></h6><span class="text-muted">Price</span>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Quizical</b></h6> <small class="text-muted">An IT Quiz Competition</small></div>
-                                     <span class="text-muted">50 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Game Of Codes</b></h6> <small class="text-muted">Coding Challenge</small></div>
-                                     <span class="text-muted">50 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                <div>
-                                  <h6 class="my-0"><b>BugVilla</b></h6> <small class="text-muted">A Bug Hunting Challenge</small></div>
-                                    <span class="text-muted">50 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Multiplayer Gaming</b></h6> <small class="text-muted">Mobile [Mini Militia]</small>
-                                    <br><small class="text-muted">PC [Counter Strike,COD,etc]</small> </div>
-                                    <small class="text-muted"><br>50 Rs <br>50 Rs</small> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Website DESIGN</b></h6> <small class="text-muted">Design A 'Website' Challenge</small></div>
-                                      <span class="text-muted">100 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Workshop Session</b></h6> <small class="text-muted">Linux Workshop</small><br>
-                                  <small class="text-muted">Git and Github</small></div>
-                                      <span class="text-muted"><br>50 Rs <br> 50 Rs </span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Feel The Beat</b></h6> <small class="text-muted">A Dance Competition (SOLO)</small><br>
-                                      <small class="text-muted">A Dance Competition (GROUP)</small></div><small class="text-muted"><br>100 Rs <br>500 Rs</small> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Ember</b></h6> <small class="text-muted">The Fashion Show</small></div>
-                                      <span class="text-muted">200 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Sargam</b></h6> <small class="text-muted">The Singing Competition</small></div>
-                                      <span class="text-muted">50 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Pixels</b></h6> <small class="text-muted">Online Photography Challenge</small></div>
-                                      <span class="text-muted">50 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>TekTion</b></h6> <small class="text-muted">Movie-Making Challenge</small></div>
-                                      <span class="text-muted">80 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>TPL</b></h6> <small class="text-muted">Cricket Tournament</small></div>
-                                      <span class="text-muted">250 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Treasure Hunt</b></h6> <small class="text-muted">The Hunt Begins</small></div>
-                                      <span class="text-muted">4x50 Rs = 200 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Couch Potato</b></h6> <small class="text-muted">Couch Potato</small></div>
-                                      <span class="text-muted">50 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Face Painting</b></h6> <small class="text-muted">Face Painting</small></div>
-                                      <span class="text-muted">50 Rs</span> </li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                  <div>
-                                    <h6 class="my-0"><b>Chess Mate</b></h6> <small class="text-muted">An Ultimate Chess Battle Royale</small></div>
-                                      <span class="text-muted">50 Rs</span> </li>
-                              </ul>
-                            </div>
                         </div>
                       </div>
                     </div>
