Event Reg Page Center-Block

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -176,25 +176,28 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                     <h4 class="modal-title">Select Events</h4>
                                                     </div>
                                                     <div class="modal-body">
-                                                            <label for="Quizzical"><input type="checkbox" class="event_checks" value=50 name="Quizzical" id="Quizzical"/>QUIZZI CAL</label><br>
-                                                            <label for="GAME OF CODING"><input type="checkbox" class="event_checks" value=50 name="GAME OF CODING" id="GAME OF CODING"/>GAME OF CODING</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (PC)"/>LAN GAMING - PC</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (MOBILE)"/>LAN GAMING - MOBILE</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="BUGVILLA BUG-HUNTING"/>BUGVILLA - BIG FINDING CHALLENGE</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=100 name="WEBSITE DESIGN"/>DOODLE - WEBSITE DESIGN COMPETITION</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS (Linux)"/>Hands On WORKSHOP - Linux and IRC</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS (Git and Github)"/>Hands On WORKSHOP - Git and Github</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=100 name="FEEL THE BEAT-DANCE COMPETITION (SOLO)"/>FEEL THE BEAT-DANCE COMPETITION (SOLO)</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=500 name="FEEL THE BEAT-DANCE COMPETITION (GROUP)"/>FEEL THE BEAT-DANCE COMPETITION (GROUP)</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=200 name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION</label><br>
+                                                            <label class="lbl" for="Quizzical"><input type="checkbox" class="event_checks" value=50 name="Quizzical" id="Quizzical"/>QUIZZI CAL  : </label><br>
+                                                            <label class="lbl" for="GOFCO"><input type="checkbox" class="event_checks" value=50 name="GAME OF CODING" id="GOFCO"/>GAME OF CODING  : </label><br>
+                                                            <br><label class="center-block">LAN GAMING</label><br>
+                                                            <label class="lbl" for="cs"><input type="checkbox" class="event_checks" id "cs" value="50" name="Counter Strike"/>Counter Strike (PC)  : </label><br>
+                                                            <label class="lbl" for="NFS"><input type="checkbox" class="event_checks" value="50" id="NFS" name="NFS"/>Need For Speed (PC)  : </label><br>
+                                                            <label class="lbl" for="FIFA"><input type="checkbox" class="event_checks" value="50" id="FIFA" name="FIFA"/>FIFA (PC)  : </label><br>
+                                                            <label class="lbl" for="MMil"><input type="checkbox" class="event_checks" value=50 id="MMil" name="Mini Militia"/>Mini MILITIA (MOBILE)  : </label><br><br>
+                                                            <label class="lbl" for="BUG"><input type="checkbox" class="event_checks" value=50 id="BUG" name="BUGVILLA BUG-HUNTING"/>BUGVILLA - BIG FINDING CHALLENGE  : </label><br>
+                                                            <label class="lbl" for="doodle"><input type="checkbox" class="event_checks" value=100 id="doodle" name="WEBSITE DESIGN"/>DOODLE - WEBSITE DESIGN COMPETITION  : </label><br>
+                                                            <label class="lbl" for="lirc"><input type="checkbox" class="event_checks" value=50 id="lirc" name="WORKSHOP SESSIONS (Linux)"/>Hands On WORKSHOP - Linux and IRC  : </label><br>
+                                                            <label class="lbl" for="git"><input type="checkbox" class="event_checks" value=50 id="git" name="WORKSHOP SESSIONS (Git and Github)"/>Hands On WORKSHOP - Git and Github  : </label><br>
+                                                            <label class="lbl" for="danceSolo"><input type="checkbox" class="event_checks" value=100 id="danceSolo" name="FEEL THE BEAT-DANCE COMPETITION (SOLO)"/>FEEL THE BEAT-DANCE COMPETITION (SOLO)  : </label><br>
+                                                            <label class="lbl" for="danceGroup"><input type="checkbox" class="event_checks" value=500 id="danceGroup" name="FEEL THE BEAT-DANCE COMPETITION (GROUP)"/>FEEL THE BEAT-DANCE COMPETITION (GROUP)  : </label><br>
+                                                            <label class="lbl" for="ember"><input type="checkbox" class="event_checks" value=200 id="ember" name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW  : </label><br>
+                                                            <label class="lbl" for="sargam"><input type="checkbox" class="event_checks" value=50 id="sargam" name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION  : </label><br>
                                                          <!--   <label for=""><input type="checkbox" class="event_checks" value=50 name="PIXELS-THE PHOTOGRAPHY COMPETITION"/>PIXELS-THE PHOTOGRAPHY COMPETITION</label><br>-->
                                                          <!--   <label for=""><input type="checkbox" class="event_checks" value=80 name="TEKTION-THE MOVIEMAKING COMPETITION"/>TEKTION-THE MOVIEMAKING COMPETITION</label><br> -->
-                                                            <label for=""><input type="checkbox" class="event_checks" value=250 name="TPL-CRICKET TOURNAMENT"/>GULLY CRICKET -CRICKET TOURNAMENT</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=200 name="TREASURE HUNT"/>HUNT'MANIA - TREASURE HUNT</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="COUCH-POTATO"/>COUCH-POTATO COMPETITION</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="FACE PAINTING"/>BRUSH STROKES - FACE PAINTING</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="CHESSMATE"/>CHESSMATE</label><br>               
+                                                            <label class="lbl" for="gully"><input type="checkbox" class="event_checks" value=250 id="gully" name="TPL-CRICKET TOURNAMENT"/>GULLY CRICKET -CRICKET TOURNAMENT  : </label><br>
+                                                            <label class="lbl" for="HUNT"><input type="checkbox" class="event_checks" value=200 id="HUNT" name="TREASURE HUNT"/>HUNT'MANIA - TREASURE HUNT  : </label><br>
+                                                            <label class="lbl" for="couch"><input type="checkbox" class="event_checks" value=50 id="couch" name="COUCH-POTATO"/>COUCH-POTATO COMPETITION  : </label><br>
+                                                            <label class="lbl" for="face"><input type="checkbox" class="event_checks" value=50 id="face" name="FACE PAINTING"/>BRUSH STROKES - FACE PAINTING  : </label><br>
+                                                            <label class="lbl" for="chess"><input type="checkbox" class="event_checks" value=50 id="chess" name="CHESSMATE"/>CHESSMATE  : </label><br>               
                                                     </div>
                                                     <div class="modal-footer">
                                                     <button type="button" name="button" class="btn btn-default" onclick="javascript:selectEvents();" data-dismiss="modal">Save</button>
