Contacts Email change

--- a/contact/index.html
+++ b/contact/index.html
@@ -128,7 +128,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <i class="fa fa-envelope-o display-block text-base-color title-extra-large-2"></i>
             <br>
             <h4 class="font-weight-300 letter-spacing-1">
-              teknothon.dcs@gmail.com<br>info@teknothon.tech
+              teknothon.dcs@gmail.com<br><br>tanzeelkhan94@gmail.com
             </h4>
           </div>
           <!-- //.row -->
