--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -176,9 +176,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                     <h4 class="modal-title">Select Events</h4>
                                                     </div>
                                                     <div class="modal-body"><br>
-                                                            <label class="lbl" for="Quizzical"><input type="checkbox" class="event_checks" value=50 name="Quizzical" id="Quizzical"/>QUIZZI CAL - IT Quiz (&#8377 50)  : </label><br>
+                                                            <label class="lbl" for="Quizzical"><input type="checkbox" class="event_checks" value=50 name="Quizzical" id="Quizzical"/>QUIZZICAL - IT Quiz (&#8377 50)  : </label><br>
                                                             <label class="lbl" for="GOFCO"><input type="checkbox" class="event_checks" value=50 name="GAME OF CODING" id="GOFCO"/>GAME OF CODING - Coding Challenge (&#8377 50) : </label><br>
-                                                            <label class="lbl" for="BUG"><input type="checkbox" class="event_checks"        value=50 id="BUG" name="BUGVILLA BUG-HUNTING"/>BUGVILLA - BIG FINDING CHALLENGE (&#8377 50) : </label><br>
+                                                            <label class="lbl" for="BUG"><input type="checkbox" class="event_checks"        value=50 id="BUG" name="BUGVILLA BUG-HUNTING"/>BUGVILLA - BUG FINDING CHALLENGE (&#8377 50) : </label><br>
                                                             <label class="lbl" for="doodle"><input type="checkbox" class="event_checks"     value=100 id="doodle" name="WEBSITE DESIGN"/>DOODLE - WEBSITE DESIGN COMPETITION (&#8377 100) : </label><br>
                                                             <label class="lbl" for="ember"><input type="checkbox" class="event_checks"      value=200 id="ember" name="EMBER-THE FASHION SHOW"/>EMBER-THE FASHION SHOW (&#8377 200) : </label><br>
                                                             <label class="lbl" for="sargam"><input type="checkbox" class="event_checks"     value=100 id="sargam" name="SARGAM-THE SINGING COMPETITION"/>SARGAM-THE SINGING COMPETITION (&#8377 100) : </label><br>
