--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -257,7 +257,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                 <h4 class="modal-title" style="text-align:center;">Pay Cash</h4>
                                             </div>
                                             <div class="modal-body">
-                                                    <h4 class="modal-title" style="font-size:100%; text-align: center;">You have been Provisionally Registered for the Events, Kindly Pay to Your Registration Fee at Registration DEsk on March 26 2018. And Avoid your Registration getting Canceled</h4>
+                                                    <h4 class="modal-title" style="font-size:100%; text-align: center;">You have been Provisionally Registered for the Events, Kindly Pay Your Registration Fee at Registration Desk on March 26 2018. And Avoid your Registration getting Cancelled</h4>
                                                     <br>
                                                     <div class="mb-3"> <label id="modalLabelcash" name="modalLabelcash">To Pay : 0</label>
                                                     </div>            
