--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -112,7 +112,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                           <div class="text-center col-md-7 mx-auto">
                             <img class="img-fluid d-block rounded mx-auto" src="../res/images/teknothon-logo.png" width="50%" height="50%">
                             <h1 class="text-success text-uppercase"><b>Event Registration</b></h1>
-                            <p class="lead">Register for your favourite event(s) before the seats run out. Theres a limit for every event.&nbsp;</p>
+                            <p class="lead">Register for your favourite event(s) before the seats run out. There are limited seats for every Event.&nbsp;</p>
                           </div>
                         </div>
                       </div>
@@ -126,7 +126,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                       <div class="container">
                         <div class="row">
                           <div class="col-md-8 order-md-1 center-block">
-                            <h4 class="mb-3">Enter Details</h4>
+                            <h4 class="mb-3" id="enterDetailsLabel">Enter Details</h4>
                             <form id="gform" method="POST" data-email="sqas.sq1@gmail.com" onSubmit='$("#thankyou_message").show();'
                             action="https://script.google.com/macros/s/AKfycbyk7WYla3b1aotieO4eUfNzYbNXHu5iMAv7e6zdAsBSR3WjIyc/exec">
                             <div class="row">
@@ -254,17 +254,17 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                         <div class="modal-content" id="modal_cash">
                                             <div class="modal-header">
                                                 <button type="button" class="close" onclick="javascript:sendData();" data-dismiss="modal">&times;</button>
-                                                <h4 class="modal-title" style="text-align:center;">Pay Cash</h4>
+                                                <h4 class="modal-title" style="text-align:center;">MODE : Cash</h4>
                                             </div>
                                             <div class="modal-body">
-                                                    <h4 class="modal-title" style="font-size:100%; text-align: center;">You have been Provisionally Registered for the Events, Kindly Pay Your Registration Fee at Registration Desk on March 26 2018. And Avoid your Registration getting Cancelled</h4>
+                                                    <h4 class="modal-title" style="font-size:100%; text-align: center;">Kindly Pay Your Registration Fee at Registration Desk on March 26 2018. And Avoid your Registration getting Cancelled</h4>
                                                     <br>
                                                     <div class="mb-3"> <label id="modalLabelcash" name="modalLabelcash">To Pay : 0</label>
                                                     </div>            
                                             </div>
                                             <div class="modal-footer">
                                                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                                    <button type="submit" class="btn btn-primary submitBtn" onclick="javascript:sendData();">SUBMIT</button>
+                                                    <button type="submit" class="btn btn-primary submitBtn" onclick="javascript:sendData();">Sure</button>
                                                     <!-- <input type="submit" value="Proceed" class="button-success btn btn-default">
                                                     <button type="submit" id="cashSubmit" class="button-success btn btn-default" onclick="javascript:sendData();" data-dismiss="modal">Close !</button> -->
                                             </div>
@@ -281,7 +281,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                             <!-- Customise the Thankyou Message People See when they submit the form: -->
                             <div style="display:none;" id="thankyou_message">
                                     <h2><em>Thank You</em><br>
-                                    We Have Recorded Ur Details and Payment. Please Be On Time on 26,27 March</h2>
+                                    You have been Successfully Registered. Please Be On Time on 26,27 March</h2>
                             </div>
                             <!-- END -->
                           </div>
@@ -493,6 +493,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
               
               else if(frm){
                 $('#noEvent').hide();
+                $('#enterDetailsLabel').hide();
                 var isCheckedCash = $('#cashRadio').is(':checked');
               } else {
                 window.alert("Kindly Enter All Required Fields");
