--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -271,7 +271,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                          </div>
                                     </div>
                                 </div>
-                                    
+                                    <div style="display:none"><input type="text" class="form-control" placeholder="BILL" required name="BILL" id="BILL">
+                                    </div>
                                 </span>   
                             </div><br>
                             <input type="button" class="btn button-success pure-button button-xlarge btn-primary btn-block w-50 text-center mx-auto" id="getModal" data-toggle="modal"
