New Thank U Msg

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -257,7 +257,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                 <h4 class="modal-title" style="text-align:center;">MODE : Cash</h4>
                                             </div>
                                             <div class="modal-body">
-                                                    <h4 class="modal-title" style="font-size:100%; text-align: center;">Kindly Pay Your Registration Fee at Registration Desk on March 26 2018. And Avoid your Registration getting Cancelled</h4>
+                                                    <h4 class="modal-title" style="font-size:100%; text-align: center;">Kindly Pay Your Registration Fee at Registration Desk on the day of Event. And Avoid your Registration getting Cancelled</h4>
                                                     <br>
                                                     <div class="mb-3"> <label id="modalLabelcash" name="modalLabelcash">To Pay : 0</label>
                                                     </div>            
@@ -282,7 +282,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                             <!-- Customise the Thankyou Message People See when they submit the form: -->
                             <div style="display:none;" id="thankyou_message">
                                     <h2><em>Thank You</em><br>
-                                    You have been Successfully Registered. Please Be On Time on 26,27 March</h2>
+                                    You have been Successfully Registered. You will recieve your confirmation mail in a moment.<br>
+                                  Kindly keep this email for future references.</h2>
                             </div>
                             <!-- END -->
                           </div>
