Added SPONSOR Pahge

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -20,7 +20,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
 
   <!-- Title, icon, description and keywords -->
   <title>Sponsors | TEKNOTHON 2018</title>
-  <link rel="shortcut icon" href="res/images/favicon.ico">
+  <link rel="shortcut icon" href="../res/images/favicon.ico">
   <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
   <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
 
@@ -105,33 +105,156 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   </nav>
   <!-- //Navigation End -->
 
-
+<style>
+  img{
+    max-height:275px;
+  }
+  .sponsor{
+    font-family: 'diavlo';
+  }
+</style>
 
   <!-- Section - Alumni Start -->
   <section id="alumni" class="bg-white">
     <div class="container">
+      <div class="row no-padding-rl">
+        <div class="col-sm-10 col-sm-offset-1">
+          <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
+            Our Sponsors
+          </h2><hr><br>
+          <h3 class="sponsor">FestPav</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div class="features-box col-sm-8 col-sm-offset-2">
+              <div class="border border-gray-light border-round box-shadow-yes position-relative">
+                <div class="display-table height-100 no-padding-rl padding-7 width-100">
+                  <div class="display-table-cell no-padding-tb padding-8 text-center">
+                    <a href="http://festpav.com/"><img src="../res/images/sponsors/festPav.png" alt="FestPav"></a>
+                  </div>
+                  <!-- //.display-table-cell -->
+                </div>
+                <!-- //.display-table -->
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">Zebronics</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div class="features-box col-sm-8 col-sm-offset-2">
+              <div class="border border-gray-light border-round box-shadow-yes position-relative">
+                <div class="display-table height-100 no-padding-rl padding-7 width-100">
+                  <div class="display-table-cell no-padding-tb padding-8 text-center">
+                    <a href="https://www.zebronics.com"><img src="../res/images/sponsors/zebronics.jpg" alt="Zebronics">
+                    </a>
+                  </div>
+                  <!-- //.display-table-cell -->
+                </div>
+                <!-- //.display-table -->
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">The Education Tree</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div class="features-box col-sm-8 col-sm-offset-2">
+              <div class="border border-gray-light border-round box-shadow-yes position-relative">
+                <div class="display-table height-100 no-padding-rl padding-7 width-100">
+                  <div class="display-table-cell no-padding-tb padding-8 text-center">
+                    <a href="https://www.facebook.com/theeducationtree/"><img src="../res/images/sponsors/tet.jpg" alt="The Education Tree">
+                    </a>
+                  </div>
+                  <!-- //.display-table-cell -->
+                </div>
+                <!-- //.display-table -->
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+
+          <h3 class="sponsor">The Violet Journal</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div class="features-box col-sm-8 col-sm-offset-2">
+              <div class="border border-gray-light border-round box-shadow-yes position-relative">
+                <div class="display-table height-100 no-padding-rl padding-7 width-100">
+                  <div class="display-table-cell no-padding-tb padding-8 text-center">
+                    <a href="https://thevioletjourno.wordpress.com"><img src="../res/images/sponsors/tvj.jpeg" alt="The Violet Journal">
+                    </a>
+                  </div>
+                  <!-- //.display-table-cell -->
+                </div>
+                <!-- //.display-table -->
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+
+          <h3 class="sponsor">The AD Crew</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div class="features-box col-sm-8 col-sm-offset-2">
+              <div class="border border-gray-light border-round box-shadow-yes position-relative">
+                <div class="display-table height-100 no-padding-rl padding-7 width-100">
+                  <div class="display-table-cell no-padding-tb padding-8 text-center">
+                    <a href="http://www.adcrew.co/"><img src="../res/images/sponsors/adcrew.png" alt="The AD Crew">
+                    </a>
+                  </div>
+                  <!-- //.display-table-cell -->
+                </div>
+                <!-- //.display-table -->
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <!-- //Features Box Style v3 End -->
+          </div>
+          <!-- //.row -->
+
+          <br>
+          <span class="bg-gray-light-2 separator-line-full xs-margin-12 xs-no-margin-rl margin-6 no-margin-rl"></span>
+        </div>
+        <!-- //.col-md-10 -->
+      </div>
+      <!-- //.row --><hr>
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center">
-          <h3 class="display-block font-weight-300 letter-spacing-1 xs-title-small title-large">
+          <h3 class="sponsor display-block font-weight-300 letter-spacing-1 xs-title-small title-large">
             Looking for Sponsorship opportunities at Teknothon JMI?
           </h3>
           <br>
-          <p class="text-gray-dark-2 xs-text-extra-large title-small">
+          <p class="sponsor text-gray-dark-2 xs-text-extra-large title-small">
             Drop us an e-mail or give us a call, and let's talk!
           </p>
           <br>
           <div class="row">
             <div class="col-xs-12 col-sm-6 display-inline-block">
               <i class="fa fa-envelope-o display-block text-base-color title-extra-large"></i>
-              <span class="display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
-                teknothon.dcs@gmail.com<br>sponsorship@teknothon.tech
+              <span class="sponsor display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
+                teknothon.dcs@gmail.com
               </span>
             </div>
             <!-- //.display-inline-block -->
 
             <div class="col-xs-12 col-sm-6 display-inline-block xs-margin-12 xs-no-margin-rl xs-no-margin-bottom">
               <i class="fa fa-phone display-block text-base-color title-extra-large"></i>
-              <span class="display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
+              <span class="sponsor display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
                 +91 96503 89803
               </span>
             </div>
@@ -142,8 +265,6 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- //.col-sm-10 .col-md-8 -->
       </div>
       <!-- //.row -->
-    </div>
-    <!-- //.container -->
   </section>
   <!-- //Section - Alumni End -->
 
