--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -110,7 +110,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
     max-height:275px;
   }
   .sponsor{
-    font-family: 'diavlo';
+    font-family: 'Diavlo';
   }
 </style>
 
